k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql
  namespace: stateful-lab

spec:

  serviceName: mysql-service

  replicas: 3

  selector:
    matchLabels:
      app: mysql

  template:

    metadata:
      labels:
        app: mysql

    spec:

      containers:

      - name: mysql

        image: nginx

        ports:
        - containerPort: 80

        volumeMounts:
        - name: mysql-data
          mountPath: /usr/share/nginx/html

  volumeClaimTemplates:

  - metadata:
      name: mysql-data

    spec:

      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 1Gi
