k8s/pod-pvc.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pvc-demo

spec:
  containers:
  - name: nginx
    image: nginx

    volumeMounts:
    - mountPath: /data
      name: storage

  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: flask-pvc
