k8s/headlessservice.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: stateful-lab

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
  - port: 3306
    targetPort: 3306
