k8s/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: prod.flaskdemo.local
    http:
      paths:

      - path: /home
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80
