k8s/ingress-stage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: stage.flaskdemo.local
    http:
      paths:

      - path: /home
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo
            port:
              number: 80
